--- a/design.css
+++ b/design.css
@@ -1,75 +1,36 @@
 @import url(https://fonts.google.com/specimen/Outfit);
-@media (max-width: 1440px) {
-  body {
-    background-color: hsl(212, 45%, 89%);
-  }
-  .flex-parent {
-    display: flex;
-    position: fixed;
-    top: 50px;
-    right: 520px;
-    flex-direction: column;
-    justify-content: center;
-    height: 450px;
-    width: 280px;
-    background-color: hsl(0, 0%, 100%);
-    border-radius: 20px;
-  }
-  .flex-parent .container {
-    position: absolute;
-    text-align: center;
-    top: 10px;
-    right: 10px;
-    left: 10px;
-  }
-  img {
-    width: 100%;
-    border-radius: 20px;
-  }
-  #headingone {
-    font-family: "Outfit", sans-serif;
-    font-weight: 700;
-  }
-  #paragraph {
-    font-size: 15px;
-    font-family: "Outfit", sans-serif;
-    font-weight: 400;
-  }
+body {
+  display: flex;
+  background-color: hsl(212, 45%, 89%);
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
 }
-@media (max-width: 375px) {
-  body {
-    background-color: hsl(212, 45%, 89%);
-  }
-  .flex-parent {
-    display: flex;
-    position: fixed;
-    flex-direction: column;
-    justify-content: center;
-    height: 500px;
-    width: 300px;
-    top: 25px;
-    left: 35px;
-    background-color: hsl(0, 0%, 100%);
-    border-radius: 20px;
-  }
-  .flex-parent .container {
-    position: absolute;
-    text-align: center;
-    top: 10px;
-    right: 10px;
-    left: 10px;
-  }
-  img {
-    width: 100%;
-    border-radius: 20px;
-  }
-  #headingone {
-    font-family: "Outfit", sans-serif;
-    font-weight: 700;
-  }
-  #paragraph {
-    font-size: 15px;
-    font-family: "Outfit", sans-serif;
-    font-weight: 400;
-  }
+
+.flex-parent {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 450px;
+  max-width: 280px;
+  background-color: hsl(0, 0%, 100%);
+  border-radius: 20px;
+  text-align: center;
+}
+
+img {
+  max-width: 250px;
+  border-radius: 20px;
+}
+
+#headingone {
+  font-size: 15px;
+  font-family: "Outfit", sans-serif;
+  font-weight: 700;
+}
+
+#paragraph {
+  font-size: 15px;
+  font-family: "Outfit", sans-serif;
+  font-weight: 400;
 }/*# sourceMappingURL=design.css.map */
