--- a/design.scss
+++ b/design.scss
@@ -4,99 +4,40 @@ $Lightgray: hsl(212, 45%, 89%);
 $Grayishblue: hsl(220, 15%, 55%);
 $Darkblue: hsl(218, 44%, 22%);
 
-@media (max-width: 1440px){
-    body{
-        background-color: $Lightgray;
-    }
-    
-    .flex-parent{
-        display: flex;
-        position: fixed;
-        top: 50px;
-        right: 520px;
-        flex-direction: column;
-        justify-content: center;
-        height: 450px;
-        width: 280px;
-        background-color: $White;
-        border-radius: 20px;
-    
-    .container{
-        position: absolute;
-        text-align: center;
-        top: 10px;
-        right: 10px;
-        left: 10px;
-    }
-    
-    
-    }
-    img{
-        width: 100%;
-        border-radius: 20px;
-    
-    }
-    
-    #headingone{
-        
-        font-family:'Outfit', sans-serif;
-        font-weight: 700;
-    
-    }
-    
-    #paragraph{
-        font-size: 15px;
-        font-family: 'Outfit', sans-serif;
-        font-weight: 400;
-    }
+body{
+    display: flex;
+    background-color: $Lightgray;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
 }
 
-@media (max-width: 375px) {
-    body{
-        background-color: $Lightgray;
-    }
+.flex-parent{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 450px;
+    max-width: 280px;
+    background-color: $White;
+    border-radius: 20px;
+    text-align: center;
     
-    .flex-parent{
-        display: flex;
-        position: fixed;
-        flex-direction: column;
-        justify-content: center;
-        height: 500px;
-        width: 300px;
-        top: 25px;
-        left: 35px;
-        background-color: $White;
-        border-radius: 20px;
-    
-    .container{
-        position: absolute;
-        text-align: center;
-        top: 10px;
-        right: 10px;
-        left: 10px;
-    }
-    
-    
-    }
-    img{
-        width: 100%;
-        border-radius: 20px;
-    
-    }
-    
-    #headingone{
-        
-        font-family:'Outfit', sans-serif;
-        font-weight: 700;
-    
-    }
-    
-    #paragraph{
-        font-size: 15px;
-        font-family: 'Outfit', sans-serif;
-        font-weight: 400;
-    }
-   
-    
+}
+img{
+    max-width: 250px;
+    border-radius: 20px;
 
+}
+
+#headingone{
+    font-size:15px;
+    font-family:'Outfit', sans-serif;
+    font-weight: 700;
+
+}
+
+#paragraph{
+    font-size: 15px;
+    font-family: 'Outfit', sans-serif;
+    font-weight: 400;
 }
